authors = ["Anton Sivtsev <sivtsev.work@gmail.com>"]
name = "rtsp"
version = "0.1.0"
edition = "2025"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "src/abstraction", 
    "src/media", "src/protocols/rtcp", 
    "src/protocols/rtp",
    "src/protocols/sdp",
    "src/protocols/tpkt",
]

[workspace.dependencies]
encoding_rs = "0.8.35"
hex = "0.4.3"
num = "0.4.3"
thiserror = "1.0"
byteorder = "1.5.0"
chrono = "0.4.39"
http = "1.2.0"
timespan = "0.2.1"
rstest = "0.24.0"
